<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.myparte.miPerfil.aseguradora.AseguradorasActivity"
    tools:showIn="@layout/activity_aseguradoras"

    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:weightSum="1"
        android:background="#373fac">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/aseguradoras1"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="#fefefe"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold"
            android:layout_weight="0.87" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btCancelar"
            android:layout_gravity="center_horizontal"
            android:textColor="#fefefe"
            android:textStyle="bold"
            android:background="#373fac" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/nuevo"
            android:id="@+id/btNuevo"
            android:layout_weight="0.09"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:textColor="#fefefe"
            android:background="#373fac" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout1">

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.95"
            android:background="#ffffff" />

        <TextView
            android:id="@id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_vacia"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:textColor="#fefefe" />

    </LinearLayout>

</RelativeLayout>
