<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.myparte.Main"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portada"
            android:id="@+id/btMiPerfil"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:layout_weight="0.20"
            android:textSize="32sp"
            android:textColor="#fefefe"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partes"
            android:id="@+id/btParte"
            android:textStyle="bold"
            android:layout_weight="0.19"
            android:textSize="32sp"
            android:textColor="#fefefe"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergencias"
            android:id="@+id/btEmergencias"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_weight="0.21"
            android:textSize="32sp"
            android:textColor="#fefefe"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>
</RelativeLayout>
