<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.myparte.parte.MenuDatos"
    tools:showIn="@layout/activity_menu_datos"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:weightSum="1"
        android:background="#373fac">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu_datos"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="#fefefe"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold"
            android:layout_weight="0.87" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btCancelar"
            android:layout_gravity="center_horizontal"
            android:textColor="#fefefe"
            android:textStyle="bold"
            android:background="#373fac"
            android:layout_weight="0.07" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvFotografias"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/fotografias"
                android:layout_weight="0.08"
                android:textColor="#fefefe" />
            <ListView
                android:id="@+id/lvFotografias"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:background="#b4bdde"
                android:layout_weight="0.08" />
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvGenerales"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:text="@string/generales"
                android:layout_weight="0.08"
                android:textColor="#fcfcfc" />
            <ListView
                android:id="@+id/lvGenerales"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:background="#b4bdde" />
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvVehiculoA"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:text="@string/vehiculoA"
                android:layout_weight="0.08"
                android:textColor="#fefefe" />
            <ListView
                android:id="@+id/lvVehiculoA"
                android:paddingLeft="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:background="#b4bdde"
                android:layout_weight="0.08"
                android:transitionGroup="false"
                android:headerDividersEnabled="false" />
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvVehiculoB"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:text="@string/vehiculoB"
                android:layout_weight="0.08"
                android:textColor="#fefefe" />
            <ListView
                android:id="@+id/lvVehiculoB"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:background="#b4bdde"
                android:layout_weight="0.08" />
            <!--<TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvFirmar"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:text="@string/firma"
                android:layout_weight="0.08" />
            <ListView
                android:id="@+id/lvFirmar"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="10.0dip"
                android:background="#b4bdde"
                android:layout_weight="0.08" />-->
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/tvTerminar"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10.0dip"
                android:text="@string/terminar"
                android:layout_weight="0.08"
                android:textColor="#fefefe" />
            <ListView
                android:id="@+id/lvTerminar"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:background="#b4bdde"
                android:layout_weight="0.08" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
